[package]
name = "cesrox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sled = { version = "0.34.6", optional = true }
thiserror = "1.0"
base64 = "0.13"
blake2 = "0.9.1"
blake3 = { version = "1", default-features = false }
sha2 = "0.9.3"
sha3 = "0.9.1"
ed25519-dalek = "1.0.1"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
k256 = { version = "0.9", features = ["ecdsa", "sha256", "zeroize"] }
zeroize = "1.3.0"
arrayref = "0.3.6"
rand = { version = "0.7.3", features = ["std", "getrandom"] }
chrono = { version = "0.4.18", features = ["serde"] }

[dev-dependencies]
tempfile = "3.1"
sodiumoxide = "0.2.6"
